# alex-rag-project

./: .gitignore  add_to_database.py  main.py  pyproject.toml  query.py  requirements.txt  utils.py
docker-image/: Dockerfile  README.md  pyproject.toml  requirements.txt
docker-image/src/: api_handler.py  work_handler.py
docker-image/src/rag_app/: add_to_database.py  query.py  query_response_model.py  test_query.py  utils.py
docker-image/test/: test_api_endpoints.py  test_cors.py  test_validation.py
rag-cdk-infra/: package-lock.json  package.json
rag-cdk-infra/lib/: rag-cdk-infra-stack.ts
